# LinkUp

./: .env.dev  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
client/: Dockerfile  package.json
client/public/: index.html
client/src/: App.tsx  fonts.css  index.css  index.tsx
client/src/api/fragments/: index.ts
client/src/api/mutations/: index.ts
client/src/components/: AppRouter.tsx
client/src/components/Forms/: index.tsx
client/src/components/Links/: BackToHomePageLink.tsx
client/src/context/: AuthContext.ts
client/src/languages/: index.ts
client/src/models/: IUser.ts
client/src/router/: index.tsx
client/src/themes/: index.ts
client/src/utils/: index.ts
config/: nginx.conf
server/: Dockerfile  manage.py  pyproject.toml
server/accounts/: admin.py  forms.py  models.py  mutations.py  schema.py  tasks.py  utils.py
server/accounts/migrations/: 0001_initial.py  0002_user_profile_picture.py  0003_remove_user_profile_picture.py  0004_user_verification_token.py  0005_user_password_change_token.py  0006_alter_user_password_change_token_and_more.py  0007_userprofile.py  0008_alter_userprofile_avatar.py
server/accounts/templates/email_templates/: registration_email.txt  reset_password.txt
server/permissions/: admin.py  middleware.py  models.py
server/permissions/migrations/: 0001_initial.py
server/server/: celery.py  middleware.py  schema.py  urls.py  utils.py
server/server/locale/uk/LC_MESSAGES/: django.mo  django.po
server/server/settings/: base.py  dev.py  prod.py
(+20 files in other folders)
