[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
Django = "^4.2.5"
graphene = "^3.3"
graphene-django = "^3.2.0"
django-graphql-jwt = "^0.3.4"
serious-django-graphene = "^0.5.1"
django-cors-headers = "^4.2.0"
mysqlclient = "^2.2.1"
babel = "^2.14.0"
python-decouple = "^3.8"
boto3 = "^1.34.25"
django-storages = "^1.14.2"
pillow = "^10.2.0"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
